# demo-kubernetes

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  USER_GUIDE.md  pyproject.toml
docker/: demo.Dockerfile  requirements-app.txt  requirements-core.txt  requirements.txt
docs/: ARCHITECTURE.md  USER_GUIDE.md
infrastructure/: .terraform.lock.hcl  main.tf  mlflow-server.yaml  mlflow-service.yaml.tftpl  ray-cluster.yaml  ray-cluster.yaml.tftpl
infrastructure/templates/: grafana-deployment.yaml.tftpl  mlflow-deployment.yaml.tftpl  ray-cluster.yaml.tftpl
src/demo/: main.py
src/demo/conf/: config.yaml
